--- a/asd.html
+++ b/asd.html
@@ -1,10 +1,3 @@
-<!doctype html>
-<html>
-  <head>
-  <meta charset="utf-8">
-  <title>doctorone</title>
-
-
 <style>
 
 /* UI Object */
@@ -33,12 +26,10 @@ div{margin:0 0 10px;padding:10px 0;color:#2d2c2d;font-family:Tahoma;font-size:14
 <!--ui object -->
 <div id="wrap">
 <p>한이음</p>
-
-  
+<!--header -->
 <div id="header">
 <p>IoT기반 드론을 이용한 화재 예방시스템</p>
 </div>
-</head>
 <!--//header -->
 <!--container -->
 <div id="container">
@@ -81,20 +72,20 @@ div{margin:0 0 10px;padding:10px 0;color:#2d2c2d;font-family:Tahoma;font-size:14
 </body>
 
 </div>
-<!—//content —>
-<!—aside —>
+<!-—//content —->
+<!-—aside —->
 <div class="aside">
 <p>타임라인</p>
 </div>
-<!—//aside —>
+<!-—//aside -—>
 </div>
-<!—//container —>
-<!—footer —>
+<!—-//container -->
+<!—-footer —->
 <div id="footer">
 	<center>
 <p>dr.one.421421@gmail.com</p>
 </center>
 </div>
-<!—//footer —>
+<!-—//footer —->
 </div>
-<!—//ui object —>
+<!—-//ui object —->
