--- a/asd.html
+++ b/asd.html
@@ -72,20 +72,20 @@ div{margin:0 0 10px;padding:10px 0;color:#2d2c2d;font-family:Tahoma;font-size:14
 </body>
 
 </div>
-<!-—//content —->
-<!-—aside —->
+<!--//content -->
+<!--aside -->
 <div class="aside">
 <p>타임라인</p>
 </div>
-<!-—//aside -—>
+<!--//aside -->
 </div>
-<!—-//container -->
-<!—-footer —->
+<!--//container -->
+<!--footer -->
 <div id="footer">
 	<center>
 <p>dr.one.421421@gmail.com</p>
 </center>
 </div>
-<!-—//footer —->
+<!--//footer -->
 </div>
-<!—-//ui object —->
+<!--//ui object -->
