--- a/asd.html
+++ b/asd.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html>
 <meta charset="utf-8">
 <style>
 
@@ -91,3 +92,4 @@ div{margin:0 0 10px;padding:10px 0;color:#2d2c2d;font-family:Tahoma;font-size:14
 <!--//footer -->
 </div>
 <!--//ui object -->
+</html>
