--- a/asd.html
+++ b/asd.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <html>
+	
+<head>	
 <meta charset="utf-8">
 <style>
 
@@ -33,6 +35,7 @@ div{margin:0 0 10px;padding:10px 0;color:#2d2c2d;font-family:Tahoma;font-size:14
 <div id="header">
 <p>IoT기반 드론을 이용한 화재 예방시스템</p>
 </div>
+</head>
 <!--//header -->
 <!--container -->
 <div id="container">
